--- a/index.html
+++ b/index.html
@@ -3,41 +3,56 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Contabilize API</title>
+    <title>Contabilize - Controle de Gastos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-light">
+<body>
 
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success d-none" id="mainNavbar">
+        <div class="container">
+            <a class="navbar-brand" href="#">Contabilize API</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#appView">Dashboard</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#formTitle">Nova Despesa</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#lista">Lista de Despesas</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
     <div class="container mt-4">
 
         <!-- LOGIN -->
         <div id="loginView" class="card p-4 col-md-4 mx-auto">
-            <h4 class="mb-3">Login</h4>
-
-            <input id="loginUser" class="form-control mb-2" placeholder="Usuário">
+            <img src="img/dollar-icon.png" alt="Contabilize" />
+            <h4>Login</h4>
+            <input id="loginUser" class="form-control mb-2" placeholder="Nome">
+            <input id="loginCpf" class="form-control mb-2" placeholder="CPF" type="number">
 
             <div class="d-grid gap-2">
                 <button class="btn btn-primary" onclick="login()">Entrar</button>
-                <button class="btn btn-outline-secondary" onclick="toggleRegister()">
-                    Criar novo usuário
-                </button>
+                <button class="btn btn-outline-secondary" onclick="toggleRegister()">Criar novo usuário</button>
             </div>
 
-            <!-- CADASTRO -->
+            <!-- REGISTER -->
             <div id="registerBox" class="mt-3 d-none">
                 <hr>
                 <h6>Novo Usuário</h6>
-                <input id="registerUser" class="form-control mb-2" placeholder="Novo usuário">
+                <input id="registerUser" class="form-control mb-2" placeholder="Nome">
+                <input id="registerCpf" class="form-control mb-2" placeholder="CPF" type="number">
                 <button class="btn btn-success w-100" onclick="register()">Cadastrar</button>
             </div>
         </div>
 
         <!-- APP -->
         <div id="appView" class="d-none">
-
 
             <div class="d-flex justify-content-between align-items-center mb-3">
                 <h3>Controle de Despesas</h3>
@@ -58,7 +73,6 @@
                 <button class="btn btn-success" onclick="addDespesa()">Salvar</button>
             </div>
 
-
             <!-- DASHBOARD -->
             <div class="row mb-3">
                 <div class="col-md-6">
@@ -75,7 +89,6 @@
                 </div>
             </div>
 
-
             <!-- FILTRO -->
             <select class="form-select mb-3" onchange="filterTipo(this.value)">
                 <option value="">Todos os tipos</option>
@@ -85,20 +98,16 @@
                 <option>Outros</option>
             </select>
 
-
-            <!-- LISTA -->
+            <!-- LISTA DE DESPESAS -->
             <ul id="lista" class="list-group mb-3"></ul>
 
-
-            <!-- TOTAL -->
+            <!-- TOTAL GERAL -->
             <div class="alert alert-info">
                 Total Geral: R$ <strong><span id="total">0.00</span></strong>
             </div>
 
-
         </div>
     </div>
-
 
     <script src="scripts.js"></script>
 </body>
