--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Contabilize API</title>
+    <title>Gastei API</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
@@ -11,12 +11,12 @@
 <body>
 
     <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-success d-none" id="mainNavbar">
+    <nav class="navbar navbar-expand-lg navbar-dark d-none" id="mainNavbar">
         <div class="container">
             <a class="navbar-brand" href="#">
                 <img src="img/dollar-icon-transparent.png" alt="Logo"
                     style="height: 32px; width:auto; margin-right: 8px;">
-                Contabilize - Controle de Gastos
+                Gastei - Controle de Gastos
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -78,7 +78,7 @@
                     <option>Contas de casa</option>
                     <option>Outros</option>
                 </select>
-                <input id="despesaResponsavel" class="form-control mb-2" placeholder="Responsável">
+                <!--<input id="despesaResponsavel" class="form-control mb-2" placeholder="Responsável">-->
                 <input id="despesaData" type="date" class="form-control mb-2" placeholder="Data Despesa">
                 <textarea id="despesaComentario" class="form-control mb-2" placeholder="Comentário" rows="4"></textarea>
                 <button id="despesaFormButton" class="btn btn-success" onclick="addDespesa()">Salvar</button>
@@ -132,7 +132,10 @@
             </div>
 
             <!-- LISTA DE USUÁRIOS -->
-            <ul id="listaUsuarios" class="list-group mb-3"></ul>
+            <div class="card p-3 mb-3">
+                <h5>Usuários Cadastrados</h5>
+                <ul id="listaUsuarios" class="list-group mb-3"></ul>
+            </div>
 
         </div>
     </div>
